Fix spacing and text

--- a/components/FeatureList/index.module.scss
+++ b/components/FeatureList/index.module.scss
@@ -97,6 +97,10 @@
           line-height: 16px;
         }
       }
+
+      .input {
+        margin-top: 8px;
+      }
     }
   }
 }
