--- a/components/ReportPageReportSection/index.module.scss
+++ b/components/ReportPageReportSection/index.module.scss
@@ -30,4 +30,8 @@
   .keyPointsWrapper {
     flex: 3;
   }
+
+  .button {
+    margin-top: 8px;
+  }
 }
