--- a/pages/research/reports/aheadofthecurve/index.module.scss
+++ b/pages/research/reports/aheadofthecurve/index.module.scss
@@ -54,9 +54,5 @@
 }
 
 .featureList {
-  margin-top: 150px;
-
-  @media (max-width: $mobile-width) {
-    margin-top: 120px;
-  }
+  margin-top: 120px;
 }
